--- a/public/style.css
+++ b/public/style.css
@@ -47,11 +47,14 @@ nav {
 	width: 30%;
 	height:1000px;
 	float: left;
-	font-size: 20px;
+	font-size: 30px;
 	font-family: 'Righteous', cursive;
 }
 
 .biceps, .triceps, .chest, .quads, .calves, .traps, .lats, .hamstrings {
 	font-family: 'Righteous', cursive;
+	padding: 30px; 
+	border: solid 1px #05CDFF;
+
 	
 }
