--- a/public/style.css
+++ b/public/style.css
@@ -2,11 +2,7 @@
 	box-sizing: border-box;
 }
 
-html, body {
-	margin: 0;
-	padding: 0;
-}
-
+/*home page*/
 nav {
 	height: 80px; 
 	width: 100%;
@@ -55,6 +51,27 @@ nav {
 	font-family: 'Righteous', cursive;
 	padding: 30px; 
 	border: solid 1px #05CDFF;
+}
 
-	
+/*login page*/
+#login-wrapper {
+	position: fixed;
+  width: 400px;
+  height: 350px;
+  top: 50%;
+  left: 50%;
+  margin-top: -150px;
+  margin-left: -175px;
+  background: #07A8C3;
+  padding-top: 10px;
+}
+
+.login-heading {
+	color: white;
+	border-bottom: solid 1px white;
+	text-align: center;	
+	padding-top: 10px;
+	font-family: 'Righteous', cursive;
+	font-size: 40px;
+	padding-bottom: 20px;
 }
