--- a/public/style.css
+++ b/public/style.css
@@ -64,10 +64,7 @@ nav {
 	flex-direction: column;
 	background: #07A8C3;
 	align-items: center;
-/*	justify-content: center;*/
 	padding-top: 10%;
-	padding-left: 20%;
-	padding-right: 20%;
 	height: 400px;
 	margin-right: 25%;
 	margin-left:25%;
@@ -78,10 +75,20 @@ nav {
 	border-bottom: solid 1px white;
 	text-align: center;	
 	font-family: 'Righteous', cursive;
-	font-size: 70px;
+	font-size: 75px;
 	text-shadow: 4px 1px black, 0 2px black, 2px 0 black, 0 -1px black;
-	padding-bottom: 20px;
-	margin-bottom: 30px;
+	padding-bottom: 10px;
+	margin-bottom: 25px;
+}
+
+.login-subheading {
+	color: white;
+	text-align: center;	
+	font-family: 'Righteous', cursive;
+	font-size: 45px;
+	text-shadow: 4px 1px black, 0 2px black, 2px 0 black, 0 -1px black;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 #username, #password, #fullname {
