--- a/public/style.css
+++ b/public/style.css
@@ -123,3 +123,11 @@ nav {
 	justify-content: center;
 }
 
+.warning-on {
+    margin-top: 15px;
+    text-align: center;
+    color: #ec0202;
+    background-color: #fff;
+    font-weight: bold;
+    font-size: 22px;
+}
